--- a/.github/workflows/testing-coverage.yaml
+++ b/.github/workflows/testing-coverage.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: check test coverage
         uses: vladopajic/go-test-coverage@v2
         with:
-          config: ./.testcoverage.yml
+          config: ./cover.out
           profile: cover.out
           local-prefix: github.com/org/project
           threshold-file: 80
